--- a/ejercicios_geo/ejemplo1.html
+++ b/ejercicios_geo/ejemplo1.html
@@ -6,7 +6,7 @@
 	<title></title>
 </head>
 <body>
-	<button onclick="geolocalizar()">Encuentrame</button>
+	<button onclick="geolocalizar()">Encuentranos</button>
 	<script type="text/javascript">
 		function geolocalizar() {
 			if (navigator.geolocation) {
